# ZMF

./: .gitignore  CMakeLists.txt  README.md  build-zmf.sh  init-zmf.sh
examples/demo-module/: CMakeLists.txt  DemoModule.cpp  DemoModule.hpp  DemoModuleConsole.cpp  DemoModuleConsole.hpp  main.cpp
examples/demo-module-UT/: CMakeLists.txt  demoModuleTests.cpp  demoModuleTests.h  main.cpp
include/: AbstractModule.hpp  ZmfConsole.hpp
include/data/: MessageType.hpp  ModuleUniqueId.hpp  ZmfInReply.hpp
include/messaging/: IZmfMessagingSendReplyHandler.hpp
include/messaging_implementation/: ExternalRequestIdentity.hpp
include/util/: NetworkUtil.hpp
include/zmf/: AbstractModule.hpp  ExternalRequestIdentity.hpp  IZmfInstanceAccess.hpp  IZmfMessagingSendReplyHandler.hpp  ModuleHandle.hpp  ModuleState.hpp  PeerRegistry.hpp  ZmfInReply.hpp  ZmfInstance.hpp  ZmfLogging.hpp  ZmfOutReply.hpp
src/: AbstractModule.cpp  CMakeCache.txt  CMakeLists.txt  IZmfInstanceAccess.hpp  IZmfInstanceController.hpp  ZmfConsole.cpp
src/config/: ConfigurationProvider.cpp  ConfigurationProvider.hpp  IConfigurationProvider.hpp
src/core/: ModuleEventDispatcher.cpp  ModuleEventDispatcher.hpp  ZmfCore.cpp  ZmfCore.hpp
src/data/: ModuleHandleInternal.hpp  ModuleUniqueId.hpp  ModuleUniqueIdInternal.cpp  ModuleUniqueIdInternal.hpp  ZmfInReplyInternal.hpp  ZmfMessage.hpp  ZmfOutReply.hpp  ZmfOutReplyInternal.hpp
src/discovery/: IPeerDiscoveryCoreInterface.hpp  IPeerDiscoveryService.hpp  PeerRegistry.hpp  PeerRegistryInternal.cpp  PeerRegistryInternal.hpp
src/discovery_implementation/: PeerDiscoveryService.cpp  PeerDiscoveryService.hpp
src/instance/: ZmfInstance.cpp  ZmfInstance.hpp
src/logging/: ZmfLogging.cpp  ZmfLoggingContainer.hpp
src/messaging/: IZmfMessagingCancelRequestHandler.hpp  IZmfMessagingCoreInterface.hpp  IZmfMessagingService.hpp
src/messaging_implementation/: ZmqZmfMessagingServiceImplementation.cpp  ZmqZmfMessagingServiceImplementation.hpp
src/proto/: FrameworkProto.pb.cc  FrameworkProto.pb.h  FrameworkProto.proto  build_proto.sh
src/util/: NetworkUtil.cpp
test/: CMakeLists.txt  DummyModule.h  PeerDiscoveryTests.cpp  PeerDiscoveryTests.h  PeerRegistryTests.cpp  PeerRegistryTests.h  TestModule.hpp  TestModuleA.cpp  TestModuleA.h  TestModuleP.cpp  TestModuleP.h  ZmfStressTest.cpp  ZmfStressTest.h  main.cpp  myTestConfig.config  startCodeCoverage.sh  zmfInteroptTest.cpp  zmfInteroptTest.h  zmfMessagingTests.cpp  zmfMessagingTests.h  zmfTests.cpp  zmfTests.h  zmqTests.cpp  zmqTests.h
util/: PI_POCO_CONFIG  create-new-module.sh  init_dependencies.sh  init_poco.sh  init_protobuf.sh  init_zmq.sh
